# llm-autoresearch

./: .gitignore  README.md  RELEASE.md  program.md  pyproject.toml  train.py
docs/: execution_changelog.md  fa1_frontier_handoff.md  flashattention1_execution_plan.md
